Actualización de links de Github

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <a
               class="attribution__link"
               href="https://www.frontendmentor.io/profile/tu1ip"
-              >tul1p</a
+              >Camilo Castellanos</a
             >.
           </p>
         </footer>
